# iot_solar_backend

./: Dockerfile  pyproject.toml  start.sh
alembic/versions/: 4acfe5d185fe_create_user_refresh_token_table.py  85a31b6c5939_create_sensor_readings_table.py  a1d5a4cc52e2_create_devices_table.py
app/: main.py
app/Aurora/: apis.py  models.py  services.py
app/Aurora/routes/: base.py
app/Aurora/schemas/: base.py  create.py  response.py
app/Aurora/utils/: instructions.py
app/Device/: apis.py  crud.py  exceptions.py  formatters.py  models.py  selectors.py  services.py
app/Device/routes/: base.py  relay.py
app/Device/schemas/: base.py  create.py  response.py
app/Sensor/: apis.py  crud.py  exceptions.py  formatters.py  models.py  services.py
app/Sensor/routes/: base.py
app/Sensor/schemas/: base.py  create.py  response.py
app/common/: exceptions.py
app/core/: settings.py  tags.py
