[project]
name = "iot-solar-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "astroid>=4.0.4",
    "asyncpg>=0.31.0",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dill>=0.4.1",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastapi-cli>=0.0.24",
    "greenlet>=3.3.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.11",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mccabe>=0.7.0",
    "mdurl>=0.1.2",
    "orjson>=3.11.7",
    "phonenumbers>=9.0.26",
    "platformdirs>=4.9.4",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.13.1",
    "pygments>=2.19.2",
    "pyjwt>=2.12.1",
    "pylint>=4.0.5",
    "pylint-plugin-utils>=0.9.0",
    "pylint-pydantic>=0.4.1",
    "python-dotenv>=1.2.2",
    "python-http-client>=3.3.7",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.48",
    "starlette>=0.52.1",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
    "typing-extensions>=4.15.0",
    "ujson>=5.12.0",
    "uvicorn>=0.42.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]
